<resources>

    <string name="app_name">yrXML</string>

    <string name="pref_title">Preference</string>
    <string name="pref_summary">Summary text goes here..</string>
    <string name="pref_default">Default value</string>
    <string name="check_title">Checkbox</string>
    <string name="check_summary">Checkbox text goes here..</string>
    <string name="contact_title">Keep in touch!</string>

    <string name="cat_pref">Preferences</string>
    <string name="cat_contact">Contact</string>

    <string name="menu_settings_title">Settings</string>
    <string name="menu_about_title">About</string>

    <string name="about_text_1">
        Les mer om vilkår for bruk av gratis værdata + retningslinjer
    </string>

    <string name="about_text_2">
        på http://om.yr.no/verdata/
    </string>

    <string name="msg_loading">Loading..</string>

</resources>
